2008-09-19  Eric B. Weddington  <eric.weddington@atmel.com>

	Contributed by Mark Litwack.
	Patch #6500
	* doc/api/faq.dox: Add FAQ about reentrant code and functions in 
	avr-libc.
	* api/main_page.dox: Add reference to new FAQ.

2008-09-19  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23969.
	* include/avr/eeprom.h: Change part of the EEPROM read routine
	to inline assembly to avoid problems with certain AVR parts.

2008-09-13  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/sleep.h: Add support for ATmega3290P.
	* include/avr/wdt.h: Same.

2008-09-13  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22240.
    * include/avr/io.h: Add E2PAGESIZE constant to documentation. Clean
	up phrasing in documentation.
	* include/avr/io1200.h (E2PAGESIZE): Defined.
	* include/avr/io2313.h: Same.
	* include/avr/io2323.h: Same.
    * include/avr/io2343.h: Same.
    * include/avr/io4414.h: Same.
    * include/avr/io4433.h: Same.
    * include/avr/io4434.h: Same.
    * include/avr/io8515.h: Same.
    * include/avr/io8535.h: Same.
    * include/avr/io86r401.h: Same.
    * include/avr/io90pwm216.h: Same.
    * include/avr/io90pwm2b.h: Same.
    * include/avr/io90pwm316.h: Same.
    * include/avr/io90pwm3b.h: Same.
    * include/avr/io90pwmx.h: Same.
    * include/avr/iocan128.h: Same.
    * include/avr/iocan32.h: Same.
    * include/avr/iocan64.h: Same.
    * include/avr/iom103.h: Same.
    * include/avr/iom128.h: Same.
    * include/avr/iom1280.h: Same.
    * include/avr/iom1281.h: Same.
    * include/avr/iom1284p.h: Same.
    * include/avr/iom16.h: Same.
    * include/avr/iom161.h: Same.
    * include/avr/iom162.h: Same.
    * include/avr/iom163.h: Same.
    * include/avr/iom164.h: Same.
    * include/avr/iom165.h: Same.
    * include/avr/iom165p.h: Same.
    * include/avr/iom168.h: Same.
    * include/avr/iom168p.h: Same.
    * include/avr/iom169.h: Same.
    * include/avr/iom169p.h: Same.
    * include/avr/iom16hva.h: Same.